# CTS-Evening-C

./: CMakeLists.txt  brainstorm.c
BeginningC++ThoughGameProgramming-4thEdition/: custom_type.cpp  dice-rollerV1.cpp  dice_rollerV2.cpp  gameDevNwrk.cpp  lost_fortune.cpp  score2.0.cpp  score_rater_2.cpp  score_recorder_1.0.cpp
C-HardWay/: HardWay-ex3.c  HardWay-ex7.c  HardWay-ex8.c  HardWay-ex9.c
Dario/Dario-challenges/: dario-classwork-2.c  dario-classwork-strings.c  pidaras.c  swap.c
Dario/DarioB4test/: debug_me01.c  hasSameDigits.c  naughtyString.c
Dario/Dario_recursion/: factorial.c  fibonacci.c  reverseNum.c
Dario/Dario_unit10/: recursiveMax.c
Dario/unit05/: myStupidFunctions.c  myStupidFunctions.h
Dario/unit06/: dario-seker.c  seker.c
Dario/unit06 - Arrays/: seker.c
Dario/units234/: lesson1.c  lesson2.c  lesson3.c
Go OOP-fastmode-c++/: Humans.cpp
Lior-classwork/lesson-09-Lior/: my_sum_of_digits.c  sum_of_digits_teacher.c
Lior-classwork/lesson-10-Lior/: ex01.c  ex02.c  ex03.c
Lior-classwork/lesson-11-Lior/: solution.c
Lior-classwork/lesson-12-Lior/: array2func.c  arrays.c  challenge01.c
Lior-classwork/lesson-13-Lior/: bohan.c  strings-1.c  strings2.c
Lior-homework/homework-3/: ex01.c  ex02.c  ex03.c  ex04.c  ex05.c
Lior-homework/homework-4/: switch-functions.c
Lior-homework/homework-5/: arrays1.c
ProceduralGen/: custom_type.cpp  fucking_pointers.cpp  not_random.cpp  pointers_part2.cpp
Recall-fast/: Real-time-test.c  faster1.c  how_many_bytes.c
preparation4test/: bohan_solution1.c  perfectNum.c
