cmake_minimum_required(VERSION 3.3)
project(C_code)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#set(SOURCE_FILES C-HardWay/HardWay-ex8.c)
#set(SOURCE_FILES C-HardWay/HardWay-ex3.c)
#set(SOURCE_FILES brainstorm.c)
#set(SOURCE_FILES Dario/Dario-challenges/dario-classwork-strings.c)
#set(SOURCE_FILES Dario/DarioB4test/debug_me01.c)
#set(SOURCE_FILES Lior-homework/homework-5/arrays1.c)
#set(SOURCE_FILES Dario/Dario_unit10/recursiveMax.c)
#set(SOURCE_FILES Recall-fast/faster1.c)
#set(SOURCE_FILES Recall-fast/Real-time-test.c)
#set(SOURCE_FILES BeginningC++ThoughGameProgramming-4thEdition/fucking_pointers.cpp)
set(SOURCE_FILES BeginningC++ThoughGameProgramming-4thEdition/gameDevNwrk.cpp)

add_executable(C_code ${SOURCE_FILES} BeginningC++ThoughGameProgramming-4thEdition/gameDevNwrk.cpp)
#add_executable(C_code ${SOURCE_FILES} BeginningC++ThoughGameProgramming-4thEdition/fucking_pointers.cpp)
#add_executable(C_code ${SOURCE_FILES} Recall-fast/faster1.c)